test/fail/integration/_fail_sem_decl_type_2.hs
x, y :: Int -> [Int]
main = print "hello"